--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thesis Evaluation Portal</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/logo-small.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>evaluation-ui</title>
   </head>
